# game_of_life

./: Cargo.toml  log.txt
src/: display.rs  files.rs  game.rs  main.rs
