[package]
name = "game_of_life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

termion = "2.0.1"
# sdl2 = {version = "0.36.0", features = ["image"]}


[dependencies.sdl2]
version = "0.36.0"
default-features = false
features = ["image"]
